--- a/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
+++ b/helm/Contrail/charts/kubemanager/templates/kubemanager.yaml
@@ -43,6 +43,15 @@ spec:
         image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
         command: ["/app"]
         imagePullPolicy: "Always"
+      - name: wait-for-api
+        image: busybox
+        command: ["sh","-c","for cn in `echo $CONTROLLER_NODES | tr ',' '\n'`; do until nc $cn 8082 -w 1 > /dev/null 2>&1; do sleep 1;echo waiting for $cn ;done;echo $cn is alive; done"]
+        env:
+        - name: CONTROLLER_NODES
+          valueFrom:
+            configMapKeyRef:
+              name: contrailcontrollernodes
+              key: CONTROLLER_NODES
       - name: contrail-node-init
         image: "{{ .Values.global.containerRegistry }}/contrail-node-init:{{ .Values.global.containerTag }}"
         imagePullPolicy: "Always"
