--- a/helm/Contrail/templates/contrail-config-map.yaml
+++ b/helm/Contrail/templates/contrail-config-map.yaml
@@ -17,3 +17,8 @@ data:
   CLOUD_ORCHESTRATOR: "kubernetes"
   CONTRAIL_CONTAINER_REGISTRY: docker.io/michaelhenkel
   CONTRAIL_CONTAINER_TAG: 5.1-dev4
+  KUBERNETES_IP_FABRIC_FORWARDING: "true"
+  KUBERNETES_IP_FABRIC_SNAT: "true"
+  KUBERNETES_CLUSTER_NAME: "kubernetes"
+  KUBERNETES_POD_SUBNETS: "10.32.0.0/12"
+  KUBERNETES_SERVICE_SUBNETS: "10.96.0.0/12"
