--- a/helm/Contrail/charts/kafka/templates/kafka.yaml
+++ b/helm/Contrail/charts/kafka/templates/kafka.yaml
@@ -22,9 +22,9 @@ spec:
       hostNetwork: true
       serviceAccountName: contrail-service-account
       initContainers:
-      - name: init-myservice
-        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
-        command: ["/app"]
+      - name: contrail-k8s-init
+        image: {{ .Values.global.containerRegistry }}/contrail-k8s-init-container:{{ .Values.global.containerTag }}
+        command: ["/contrail-k8s-init"]
         imagePullPolicy: "Always"
       containers:
       - name: kafka
