--- a/helm/Contrail/charts/vrouter/templates/vrouter.yaml
+++ b/helm/Contrail/charts/vrouter/templates/vrouter.yaml
@@ -10,6 +10,15 @@ spec:
       labels:
         app: contrailvrouter
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: "node-role.kubernetes.io/master"
+                operator: NotIn
+                values:
+                - ""
       tolerations:
       - operator: Exists
         effect: NoSchedule
@@ -18,9 +27,9 @@ spec:
       hostNetwork: true
       serviceAccountName: contrail-service-account
       initContainers:
-      - name: init-myservice
-        image: {{ .Values.global.containerRegistry }}/contrail-init:{{ .Values.global.containerTag }}
-        command: ["/app"]
+      - name: contrail-k8s-init
+        image: {{ .Values.global.containerRegistry }}/contrail-k8s-init-container:{{ .Values.global.containerTag }}
+        command: ["/contrail-k8s-init"]
         imagePullPolicy: "Always"
       - name: wait-for-api
         image: busybox
