--- a/helm/Contrail/templates/contrail-config-map.yaml
+++ b/helm/Contrail/templates/contrail-config-map.yaml
@@ -16,9 +16,9 @@ data:
   ZOOKEEPER_ANALYTICS_PORT: "2181"
   CLOUD_ORCHESTRATOR: "kubernetes"
   CONTRAIL_CONTAINER_REGISTRY: docker.io/michaelhenkel
-  CONTRAIL_CONTAINER_TAG: 5.1-dev4
+  CONTRAIL_CONTAINER_TAG: 5.1-dev5
   KUBERNETES_IP_FABRIC_FORWARDING: "true"
   KUBERNETES_IP_FABRIC_SNAT: "true"
-  KUBERNETES_CLUSTER_NAME: "kubernetes"
-  KUBERNETES_POD_SUBNETS: "10.32.0.0/12"
-  KUBERNETES_SERVICE_SUBNETS: "10.96.0.0/12"
+  #KUBERNETES_CLUSTER_NAME: "kubernetes"
+  #KUBERNETES_POD_SUBNETS: "10.32.0.0/12"
+  #KUBERNETES_SERVICE_SUBNETS: "10.96.0.0/12"
