--- a/helm/Contrail/charts/vrouter/templates/vrouter.yaml
+++ b/helm/Contrail/charts/vrouter/templates/vrouter.yaml
@@ -10,15 +10,15 @@ spec:
       labels:
         app: contrailvrouter
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: "node-role.kubernetes.io/master"
-                operator: NotIn
-                values:
-                - ""
+#      affinity:
+#        nodeAffinity:
+#          requiredDuringSchedulingIgnoredDuringExecution:
+#            nodeSelectorTerms:
+#            - matchExpressions:
+#              - key: "node-role.kubernetes.io/master"
+#                operator: NotIn
+#                values:
+#                - ""
       tolerations:
       - operator: Exists
         effect: NoSchedule
